# OptionsTitan

./: .gitignore  OptionsTitan_ThetaData_Plan.md  README_DATA_COLLECTION.md  main.py  options_gui.py  options_gui_qt.py  pyproject.toml  readme.md  requirements.txt  verify_installation.py
docs/: ADVANCED_CONFIGURATION.md  DATA_COLLECTION_GUIDE.md  DATA_SOURCE_SETUP.md  GETTING_STARTED.md  MIGRATION_TO_UV.md  PERFORMANCE_GUIDE.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md
docs/gui/: GUI_GUIDE.md  GUI_PREVIEW.txt  GUI_QUICKSTART.md  README.md
docs/llama/: LLAMA_AI_SETUP.md  LLAMA_QUICKSTART.md  README.md
scripts/: README.md  fetch_all_tickers.bat  fetch_all_tickers.sh  install.bat  install.sh  launch_gui.bat  launch_gui.sh  launch_gui_qt.bat  launch_gui_qt.sh  setup_llama.sh
src/: Training.py  Training_MultiTicker.py  __init__.py  ensemble_models.py  integrated_pipeline.py  model_explainability.py  risk_management.py
src/data_collection/: __init__.py  config.py  corporate_actions.py  data_fetcher.py  data_normalizer.py  dataset_catalog.py  parquet_query.py  remote_query.py  schema_contract.py  thetadata_client.py
tests/: __init__.py  conftest.py
ui/: __init__.py  analyzer.py  charts_widget.py  input_panel.py  kpi_cards.py  main_window.py  results_widget.py  strategy_card.py  styles.py  ui_utils.py  workers.py
